navbar menu fix in mobile
was overflowing in Work page

--- a/css/menu.css
+++ b/css/menu.css
@@ -40,6 +40,8 @@
 
 .navbar-menu-open {
 
+    width: 100vw;
+
     .navbar {
         background-color: var(--base-color-brand--eerie-black);
         border-color: var(--base-color-brand--eerie-black);
